@@ -1,3 +1,6 @@
+MD-2008-01-17-0: Enhancem.: added Issue test 2372
+                 Review:    JG
+
 CR-2008-01-17-0: Bugfix:    Fixed wrong format in wait_for_remote_dir
 
 JG-2008-01-17-0: Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
